updated the demo code with a little create/get user thign
